# blazingly-fast-java-version-manager

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile.toml  Notes.md  Readme.md
.github/workflows/: rust.yml
scripts/: bfjvm-init-git-bash.sh
src/: config.rs  init.rs  main.rs  memory.rs  proj_dirs.rs  string_utils.rs  switch.rs  utility.rs
src/init/: directory_autocomplete.rs
