[package]
name = "blazingly-fast-java-version-manager"
version = "0.1.0"
edition = "2021"
authors = ["Félix Vadcard <vadcard.felix@gmail.com>"]
description = "Simple, fast and efficient java version manager"
repository = "https://github.com/theCat69/blazingly-fast-java-version-manager"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["java", "version", "manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "bf-j-vm"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
directories = "5.0.1"
inquire = "0.6.2"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
sha256 = "1.1.4"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"]}
walkdir = "2.3.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
windows = { version = "0.48.0", features = ["Win32_Storage_FileSystem"]}
